--- a/Coiffure/Coiffure.csproj
+++ b/Coiffure/Coiffure.csproj
@@ -96,6 +96,12 @@
     <Compile Include="Reserver.Designer.cs">
       <DependentUpon>Reserver.cs</DependentUpon>
     </Compile>
+    <Compile Include="typecoiffure.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="typecoiffure.Designer.cs">
+      <DependentUpon>typecoiffure.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="conecter.resx">
       <DependentUpon>conecter.cs</DependentUpon>
     </EmbeddedResource>
@@ -123,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reserver.resx">
       <DependentUpon>Reserver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="typecoiffure.resx">
+      <DependentUpon>typecoiffure.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
