--- a/Coiffure/Coiffure.csproj
+++ b/Coiffure/Coiffure.csproj
@@ -82,12 +82,6 @@
     <Compile Include="inscrire.Designer.cs">
       <DependentUpon>inscrire.cs</DependentUpon>
     </Compile>
-    <Compile Include="Parametre.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Parametre.Designer.cs">
-      <DependentUpon>Parametre.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="propos.cs">
@@ -119,9 +113,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="inscrire.resx">
       <DependentUpon>inscrire.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Parametre.resx">
-      <DependentUpon>Parametre.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -301,6 +292,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\invert_colors_24px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pexels-caleb-oquendo-3162022.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pexels-josh-sorenson-9953001.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
