--- a/Coiffure/app.config
+++ b/Coiffure/app.config
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+<configSections>
+</configSections>
+<connectionStrings>
+    <add name="Coiffure.Properties.Settings.salonConnectionString"
+        connectionString="Data Source=DESKTOP-AD61IOL\SQLEXPRESS;Initial Catalog=salon;User ID=sa;Password=123456"
+        providerName="System.Data.SqlClient" />
+</connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
