create code of server and connected with file txt ..........

--- a/Coiffure/Coiffure.csproj
+++ b/Coiffure/Coiffure.csproj
@@ -39,6 +39,9 @@
     <Reference Include="MaterialSkin, Version=2.3.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialSkin.2.2.3.1\lib\net461\MaterialSkin.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
@@ -78,6 +81,12 @@
     </Compile>
     <Compile Include="Configuration.Designer.cs">
       <DependentUpon>Configuration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Gere_les_client.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gere_les_client.Designer.cs">
+      <DependentUpon>Gere_les_client.cs</DependentUpon>
     </Compile>
     <Compile Include="inscrire.cs">
       <SubType>Form</SubType>
@@ -122,6 +131,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Configuration.resx">
       <DependentUpon>Configuration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gere_les_client.resx">
+      <DependentUpon>Gere_les_client.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="inscrire.resx">
       <DependentUpon>inscrire.cs</DependentUpon>
